2002-01-03  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>

	* gda-row.[ch]:
	* gda-value.[ch]: added support for GdaGeometricPoint type

	* gda-server-connection.c (gda_server_connection_free_error_list): 
	Test if the error list is NULL to avoid failing assertion in
	gda_error_list_free().

2002-01-02  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>

	* gda-server-recordset.c (get_row): fixed counter on row retrieval
	loop, which was getting always 1 row more

	* Makefile.am: s/IDLFILES/IDL_FILES, so that ORBit-generated files
	are regenerated when the IDL files change
	* gda-server-connection.c (gda_server_connection_free_error_list): 
	Test if the error list is NULL to avoid failing assertion in
	gda_error_list_free().

2001-12-31  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-recordset.c (gda_recordset_get_value_at): move to next row
	after successfully fetching

2001-12-30  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-server-recordset-model.[ch]: new class, for creating
	GdaServerRecordset's from data models

	* gda-server-recordset.[ch] (gda_server_recordset_set_connection):
	(gda_server_recordset_set_fetch_func):
	(gda_server_recordset_set_describe_func): new functions

	* gda-row.[ch] (gda_field_set_value): set const for GdaValue argument

2001-12-29  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-connection.h: added new schemas to GdaConnectionSchema

2001-12-27  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-server-provider.[ch]: added getSchema virtual function
	(gda_server_provider_get_schema): new function

	* gda-server-connection.c (impl_Connection_getSchema): implemented

	* gda-connection.[ch] (gda_connection_get_schema): new function

	* gda-parameter.[ch] (gda_parameter_list_new_from_corba): new function

2001-12-25  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-server-connection.c (gda_server_connection_class_init): also
	initialize the supports function pointer

	* gda-xml-database.[ch] (gda_xml_database_new_from_uri): renamed